@@ -1,6 +1,6 @@
 <?php
-include ('../school.php');
-include ('classdata.php');
+include('../school.php');
+include('classdata.php');
 print '<?xml version="1.0" encoding="utf-8"?'.'>';
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -10,7 +10,7 @@ print '<?xml version="1.0" encoding="utf-8"?'.'>';
 <meta http-equiv="Content-Script-Type" content="text/JavaScript" />
 <meta name="copyright" content="Copyright 2002, 2003, 2004, 2005, 2006
 	Stuart Thomas Johnson. All trademarks acknowledged. All rights reserved." />
-<meta name="version" content="<?php print $version; ?>" />
+<meta name="version" content="<?php print $CFG->version; ?>" />
 <meta name="license" content="GNU General Public License version 2" />
 <link id="parentstyle" href="css/viewstyle.css" rel="stylesheet" type="text/css" />
 <link id="parentstyle" href="css/logbook.css" rel="stylesheet" type="text/css" />
