@@ -11,6 +11,7 @@ $host='infobook.php';
 $book='infobook';
 $current='';
 $choice='';
+$action='';
 $cancel='';
 
 include('scripts/head_options.php');
